# tempest

./: .agent_done_1  .agent_done_2  .agent_done_3  .agent_done_4  .architect_in_progress  .design_review_in_progress  .gitignore  .sprint_complete  ARCHITECTURE.md  ARCHITECT_STATE.md  BACKLOG.md  BLOCKERS.md  Cargo.toml  DESIGN_DEBT.md  DESIGN_DEBT_ARCHIVE.md  DESIGN_REVIEW_STATE.md  GOLDEN_CLI_RESEARCH.md  LEARNINGS.md  PERFORMANCE_BASELINES.md  PRD.md  SKILLS_INVENTORY.md  TODO1.md  TODO2.md  TODO3.md  TODO4.md  build.sh  download_fixtures.sh  gastown.toml  generate_fixture_metadata.py  readme.md  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml
comms/archive/: architect_questions_responses.md
comms/outbox/: architect_critical_findings.md  architect_progress.md  architect_progress_2026-02-24.md  architect_progress_2026-02-24_1700.md  architect_progress_2026-02-24_1755.md  architect_progress_2026-02-24_1800.md  architect_progress_2026-02-24_1845.md  architect_progress_2026-02-24_1900.md  architect_progress_2026-02-24_2053.md  architect_progress_2026-02-25_0045.md  architect_progress_2026-02-25_0709.md  architect_progress_2026-02-25_0845.md  architect_progress_2026-02-25_1110.md  architect_questions.md  progress_2026-02-24.md  progress_2026-02-24_2306.md  progress_2026-02-24_agent2.md  progress_2026-02-24_agent2_final.md  progress_2026-02-24_agent3.md  progress_2026-02-24_agent3_final.md  progress_2026-02-24_agent4.md  progress_2026-02-24_agent4_final.md  progress_2026-02-25_agent3_final.md
docs/: TESTING_METHODOLOGY.md
prompts/: ARCHITECT_PARALLEL.md  BUG_TRIAGE.md  DESIGN_REVIEW.md  DEV.md  DEV_PARALLEL.md  DEV_PARALLEL_1.md  DEV_PARALLEL_2.md  DEV_PARALLEL_3.md  DEV_PARALLEL_4.md  FIX.md  JANITOR.md  QA.md  SUMMARIZER.md
reports/: summary-todo1-sync-2026-02-25T012347.html
scripts/: coverage-ratchet.sh
skills/: DISCLI.md  README.md
skills/iced-rs/: SKILL.md
summarizer-narratives/: 2026-02-22T1500.md  2026-02-22T1600.md  2026-02-22T2000.md  2026-02-22T2100.md  2026-02-22T2200.md  2026-02-22T2300.md  2026-02-230100.md  2026-02-230800.md  2026-02-23T0000.md  2026-02-23T0200.md  2026-02-23T0300.md  2026-02-23T0400.md  2026-02-23T0600.md  2026-02-23T0700.md  2026-02-23T0900.md  2026-02-23T1000.md  2026-02-23T1100.md  2026-02-23T1200.md  2026-02-23T1300.md  2026-02-23T1400.md  2026-02-23T1500.md  2026-02-23T1600.md  2026-02-23T1700.md  2026-02-23T1900.md  2026-02-23T2000.md  2026-02-23T2100.md  2026-02-23T2200.md  2026-02-23T2300.md  2026-02-240200.md  2026-02-240800.md  2026-02-24T0000.md  2026-02-24T0100.md  2026-02-24T0300.md  2026-02-24T0400.md  2026-02-24T0500.md  2026-02-24T0600.md  2026-02-24T0700.md  2026-02-24T0900.md  2026-02-24T1000.md  2026-02-24T1100.md  (+24 more)
tempest-app/: Cargo.toml
tempest-app/src/: cache_manager.rs  color_legend.rs  colors.rs  config.rs  elevation_tilt_selector.rs  golden_cli.rs  golden_cli_bin.rs  lib.rs  main.rs  moment_switcher.rs  offline_detection.rs  offline_indicator.rs  spacing.rs  station_selector.rs  test_utils.rs  timeline.rs
tempest-app/tests/: golden_cli_test.rs
tempest-app/tests/e2e/: app_harness_test.rs  gui_harness_test.rs  mod.rs
tempest-decode/: Cargo.toml
tempest-decode/benches/: decode_benchmark.rs
tempest-decode/examples/: gen_fixtures.rs
tempest-decode/src/: error.rs  lib.rs  main.rs  msg1.rs  msg31.rs  radial_tests.rs  types.rs
tempest-decode/tests/: fetch_decode_pipeline_test.rs  golden_value_tests.rs  synthetic_radial_test.rs  vcp_integration_test.rs
tempest-fetch/: Cargo.toml
tempest-fetch/benches/: pipeline_benchmark.rs
tempest-fetch/src/: cache.rs  decompress.rs  error.rs  lib.rs  mock_s3.rs  poll.rs  prefetch.rs  prefetch_service.rs  retry.rs  s3.rs  station.rs  stations_data.rs  types.rs
tempest-fetch/tests/e2e/: fetch_pipeline_test.rs  mod.rs
tempest-golden/: Cargo.toml  README.md
tempest-golden/src/: main.rs
tempest-map/: Cargo.toml
tempest-map/src/: lib.rs  tile.rs  tile_manager.rs
tempest-render/: Cargo.toml
tempest-render-core/: Cargo.toml
tempest-render-core/src/: color.rs  lib.rs  projection.rs  types.rs
tempest-render-core/tests/: decode_project_pipeline.rs  visual_utils.rs
tempest-render/src/: config.rs  lib.rs  pipeline.rs  renderer.rs  vertices.rs  view_transform.rs
tempest-render/tests/: visual_regression.rs
tempest-render/tests/golden/: .gitkeep
