[workspace]
resolver = "2"
members = [
    "tempest-decode",
    "tempest-fetch",
    "tempest-app",
    # "tempest-render-core",
    # "tempest-render",
    # "tempest-map",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.70"
edition = "2021"

[workspace.dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
cargo-tarpaulin = "0.27"
