[package]
name = "tempest-app"
description = "Tempest - NEXRAD Weather Radar Application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
iced = { version = "0.13", features = ["image", "svg"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tempest-decode = { path = "../tempest-decode" }
tempest-fetch = { path = "../tempest-fetch" }
tempest-render-core = { path = "../tempest-render-core" }
# Note: tempest-render and tempest-map dependencies 
# temporarily removed due to wgpu version conflict with iced 0.12
image = "0.25"
anyhow = "1.0"
directories = "5"
tracing = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempest-fetch = { path = "../tempest-fetch" }
tempest-decode = { path = "../tempest-decode" }
tempest-render-core = { path = "../tempest-render-core" }
mockito = "1.2"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
flate2 = "1.0"
bzip2 = "0.6"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[bin]]
name = "tempest"
path = "src/main.rs"

[[bin]]
name = "golden-cli"
path = "src/golden_cli_bin.rs"

[lib]
path = "src/lib.rs"
name = "tempest_app"
