[package]
name = "tempest-decode"
description = "Phase 1: Archive2 decoder library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[example]]
name = "gen_fixtures"
path = "examples/gen_fixtures.rs"

[dependencies]
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
