[package]
name = "tempest-fetch"
description = "Phase 3: S3 data pipeline and local cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1.0"
bytes = "1.5"
tokio = { version = "1.35", features = ["rt", "time", "sync", "macros", "fs"] }
tokio-stream = "0.1"
async-stream = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
walkdir = "2.4"
bzip2 = "0.6"
flate2 = { version = "1.0", features = ["rust_backend"] }
mockito = "1.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[bench]]
name = "pipeline_benchmark"
harness = false
