[package]
name = "tempest-map"
description = "Phase 5: Interactive base map"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace]

[dependencies]
wgpu = "23"
wgpu-types = "23"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
image = "0.25"
thiserror = "2"
dirs = "5"
futures = "0.3"

# Workspace crate dependencies
tempest-decode = { path = "../tempest-decode" }
tempest-render-core = { path = "../tempest-render-core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
tempfile = "3"
