[package]
name = "tempest-render-core"
description = "Phase 2: Geospatial projection and color mapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tempest-decode = { path = "../tempest-decode" }

[dev-dependencies]
chrono = "0.4"
insta = "1.39"  # Snapshot testing library
image = "0.25"  # For image creation and comparison
