[package]
name = "tempest-render"
description = "Phase 4: GPU radar rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wgpu = "23"
wgpu-types = "23"
raw-window-handle = "0.6"
futures-intrusive = "0.5"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
tempest-decode = { path = "../tempest-decode" }
tempest-render-core = { path = "../tempest-render-core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
image = "0.25"
similar = "2"
futures = "0.3"
